# Full-Press-ML

./: .gitignore  DATA_SCHEMA_AND_JOIN.md  FEATURE_ENGINEERING_PLAN.md  Nic's_copy_of_FullPressML.ipynb  PIPELINE_OVERVIEW.md  PROJECT_PLAN.md  README.md  REPORT.md  pyproject.toml
configs/: defaults.yaml
scripts/: build_possessions.py  build_rich_tracking.py  download_tiny_dataset.py  setup_venv.sh  train_baseline.py  train_lstm.py
src/full_press_ml/: __init__.py
src/full_press_ml/data/: build_possessions.py  build_rich_tracking.py  possession_rules.py  raw_loader.py  schema.py  tracking_dataset.py
src/full_press_ml/evaluation/: analyze.py  metrics.py
src/full_press_ml/features/: engineer.py
src/full_press_ml/models/: baselines.py  lstm_model.py
src/full_press_ml/training/: train_baseline.py  train_lstm.py
tasks/: README.md  data_pipeline.md  evaluation.md  feature_engineering.md  modeling.md
tests/: test_data_pipeline.py  test_metrics.py
